--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
